# HealthDiagnosisApp_DuDoanBenh

./: .gitignore  README.md  app.py  data.py  eda.py  models.py  pyproject.toml  requirements.txt  services.py  tangcuongdl.py  themtuoi.py  visualizations.py
.edge-profile/: Local State
.edge-profile/Default/: Bookmarks  BrowsingTopicsState  DIPS-wal  Favicons  History  Login Data  Preferences  Secure Preferences  Web Data  load_statistics.db
.edge-profile/Default/DawnGraphiteCache/: index
.edge-profile/Default/DawnWebGPUCache/: index
.edge-profile/Default/EdgeHubAppUsage/: EdgeHubAppUsageSQLite.db
.edge-profile/Default/EdgeSessions/: SessionRestoreLog
.edge-profile/GrShaderCache/: index
.edge-profile/ShaderCache/: index
HealthDiagnosisApp/: HealthDiagnosisApp.sln
HealthDiagnosisApp/HealthDiagnosisApp/: Program.cs
datasets/: 01_raw_data_3000.xlsx  02_cleaned_data_2357.xlsx  02_cleaned_data_2659.xlsx  03_final_augmented_data_3500.xlsx  health_training_data.xlsx  massive_health_training_data.xlsx  massive_health_training_data_v2.xlsx
scripts/: chuandoantrenluat.py  export_dataset.py  kiemdinh_thongke.py  predict_with_trained_model.py  taomatrannhamlan.py  train_model.py
static/css/: site.css
static/js/: site.js
templates/: error.html  index.html  layout.html  result.html
tests/: test_app_routes.py  test_association_rules.py  test_trained_model_service.py  test_visualizations.py
trained_models/: Bao_Cao_Kiem_Dinh.txt  Bao_Cao_Kiem_Dinh_Toan_Dien.txt  association_rules_meta.json  health_diagnosis_model.pt  health_diagnosis_model_meta.json
(+65 files in other folders)
