[project]
name = "health-diagnosis-app"
version = "1.0.0"
description = "Ung dung chan doan benh bang thuat toan KNN, viet bang Python Flask."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "mlxtend>=0.23,<1.0",
    "networkx>=3.0,<4.0",
    "numpy>=2.0,<3.0",
    "openpyxl>=3.1,<4.0",
    "pandas>=2.2,<4.0",
    "plotly>=6.0,<7.0",
    "pyvis>=0.3,<1.0",
    "seaborn>=0.13,<1.0",
    "torch>=2.3,<3.0",
]

[tool.uv]
package = false
